2026-01-05  Zhengyi Fu  <i@fuzy.me>

	Use /bin/sh in remote connections

	* init.el (remote-explicit-shell-file-name): Set
	`explicit-shell-file-name' to "/bin/sh".

	There are usually no /bin/bash on NixOS.

2026-01-05  Zhengyi Fu  <i@fuzy.me>

	Specify fonts for nerd icons

	* init.el (+init-fontsets): Specify fonts for nerd icons..
	(nerd-icons-set-font): Remove advice.  The ranges of nerd font
	icons in `nerd-icons-set-font' are out-of-date.

2026-01-05  Zhengyi Fu  <i@fuzy.me>

	Disable ctrlf in pdf-isearch-minor-mode

	* init.el (+pdf-isearch-minor-mode-disable-ctrlf): New function.

2026-01-02  Zhengyi Fu  <i@fuzy.me>

	Replace `isearch' with `ctrlf'

	* packages.el (ctrlf-mode): New package.
	* init.el: Enable `ctrlf-mode'.

2025-12-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (vc-svn-global-switches): Do not set anymore.

2025-11-25  Zhengyi Fu  <i@fuzy.me>

	* setup.sh: Add some hooks.

2025-11-19  Zhengyi Fu  <i@fuzy.me>

	Add package `agenix'

	* packages.el (agenix): New package.
	* init.el (agenix-age-program): Set to "rage".

2025-11-17  Zhengyi Fu  <i@fuzy.me>

	Remove some customizations on themes

	* init.el (dotemacs-theme-refresh): Remove some customizations.
	(dotemacs-theme-disable): Remove hooks.

2025-11-13  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Don't require gptel-tools.

2025-11-13  Zhengyi Fu  <i@fuzy.me>

	Replace homebrewed gptel-agent command by the gptel-agent package

	* site-lisp/gptel-tools.el: Moved to site-lisp/obsoletes/gptel-tools.el.
	* site-lisp/gptel-config.el (+gptel-read-documentation)
	(gptel-agent, gptel-agent--setup-context): Remove.
	(gptel-agent-backend, gptel-agent-model, "read_documentation"): Remove.
	* packages.el: Add package `gptel-agent'.
	* init.el: Remove autoloaded gptel-agent command.

2025-11-12  Zhengyi Fu  <i@fuzy.me>

	Fix error in gptel-tools

	* site-lisp/gptel-tools.el (gptel-tools--shell-command-confirm-p):
	Treat nil working-dir as `default-directory'.
